# opencord-server

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: ci.yml  cla.yml
deploy/docker-compose/: compose.yaml
deploy/livekit/: livekit-turn.yaml
docs/: coturn.md  development.md
openapi/: openapi.yaml
services/api/: README.md
services/media-control/: README.md
services/realtime/: README.md
services/worker/: README.md
src/: config.rs  lib.rs  local_seed.rs  routes.rs  state.rs  version.rs
src/controllers/: attachment_controller.rs  audit_controller.rs  auth_controller.rs  billing_controller.rs  bot_controller.rs  calendar_controller.rs  channel_controller.rs  command_controller.rs  (+21 more)
tests/: architecture_foundation.rs  attachments_api.rs  audit_api.rs  auth_api.rs  billing_api.rs  bot_applications_api.rs  bot_schema.rs  calendar_api.rs  channels_api.rs  command_schema.rs  compat_commands_api.rs  compat_contract_harness.rs  compat_discovery_api.rs  compat_gateway_api.rs  compat_gateway_schema.rs  compat_gateway_sessions.rs  compat_messages_api.rs  data_export_api.rs  http_api.rs  ids.rs  kafka_queue_smoke.rs  local_dev_commands.rs  local_seed.rs  media_control_api.rs  meeting_schema.rs  meetings_api.rs  messages_api.rs  openapi_contract.rs  organizations_api.rs  permissions_api.rs  push_tokens_api.rs  realtime_api.rs  reminder_worker.rs  retention_api.rs  retention_worker.rs  scim_api.rs  scylla_store_smoke.rs  spaces_api.rs  voice_api.rs  webhook_schema.rs  (+1 more)
(+148 files in other folders)
